# eventbrite-spike

./: .gitignore  connect.py  eventbrite-spike.ipynb  functions.ipynb  pyproject.toml
